<resources>
    <string name="app_name">MyOwnMatrixApp</string>


    <string name="Slogan">Move with us</string>


    <string name="verify_account1">We sent a code to your number</string>
    <string name="verify_account2">To complete your mobile number verification</string>
    <string name="verify_account3">please enter a 6-digit code.</string>
    <string name="hint_text">Enter Confirmation Token</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Sign_up">Sign up</string>
    <string name="Log_in">Log in</string>
    <string name="details">By Creating an Account you agree to our Terms of Service and Privacy Policy</string>

    <string name="verify_account">VERIFY ACCOUNT</string>

    <string name="User_email">User Email</string>

    <string name="User_Name">User Name</string>

    <string name="logged_in">Keep me logged in</string>
    <string name="Create">Create an account</string>
    <string-array name="truck_type">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_post_load">PostLoadActivity</string>

    <string name="title_activity_document">DocumentActivity</string>
    <string name="title_activity_document1">DocumentActivity1</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_current_locationn">Map</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">abdulbasit@gmail.com</string>
    <string name="test_password">123456</string>
    <string name="firebase_path">location</string>
    <string name="msg_location_service_started">Location tracking started</string>
    <string name="title_alert_no_intenet">No internet access</string>
    <string name="msg_alert_no_internet">No Internet access</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="permission_rationale">permission granted</string>
    <string name="permission_denied_explanation">permission denied</string>
    <string name="settings">settings</string>
    <string name="pick_date">Pick Date</string>
    <string name="click_here">Pick Time</string>
    <string name="part">Part</string>
    <string name="full">Full</string>
    <string name="any">Any</string>
    <string name="load_type">Load Type</string>
    <string name="truck_type">Truck type</string>
    <string name="weight">Weight</string>
    <string name="material_type">Materil</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="pick_time">Pick Time</string>
    <string name="post">Post</string>
    <string name="enter_location">Enter Location</string>
    <string name="select_current_location">Current Location</string>
    <string name="ok">Ok</string>
</resources>
