<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColour"
    tools:context=".SignUp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/l_layout_1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:gravity="center|center_vertical|center_horizontal">



        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/verify_account1"
            android:textColor="@color/textColor"
            />


        <TextView
            android:id="@+id/slogan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/verify_account2"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/slogan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/verify_account3"
            android:textColor="@color/textColor"
            />


    </LinearLayout>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".3"
    android:gravity="center"
    android:layout_marginLeft="@dimen/padding"
    android:layout_marginRight="@dimen/padding"
    >

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"

            android:inputType="phone"
            android:hint="@string/hint_text"
            android:textColor="@color/textColorHint"
            android:textSize="18dp"
            android:background="@drawable/edit_text"
            android:textCursorDrawable="@null"
                      />




</LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"

        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/accept"
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:text="@string/verify_account"
            android:textSize="16sp"
           android:layout_margin="5dp"
            android:background="@drawable/button"/>


    </LinearLayout>

</LinearLayout>